A few improvements on chapter 3

--- a/chapter1.tex
+++ b/chapter1.tex
@@ -145,7 +145,7 @@ M_k(G,v) =
 \begin{definition}[شاخص زاگرب]
 برای گراف \گراف{G}، شاخص‌های اول و دوم زاگرب به ترتیب به صورت
 \begin{equation*}
-Z_\1(G) = \sum_{v\in V}(d(v))^2
+Z_\1(G) = \sum_{v\in V}(d(v))^\2
 \end{equation*}
 و
 \begin{equation*}
