--- a/chapter3.tex
+++ b/chapter3.tex
@@ -115,25 +115,24 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 در این بخش به مقایسه گرافلت‌کرنل گاوسی (GGK) و گرافلت کرنل (GK) ارائه شده توسط شرواشیتز\جستار{Shervashidze_2009} می‌پردازیم. همانطور که قبلاً ذکر شد، \متن‌لاتین{GK} حاصل ضرب‌داخلی بردار زیرگراف‌های کوچک پروتئین‌هاست. اگرچه نویسنده به این بردار، نام \خمیده{بردار گرافلت} را داده‌است، اما باید توجه داشت که در این کرنل، هر زیرگراف کوچک اعم از القایی یا غیر القایی، همبند یا ناهمبند، گرافلت تلقی می‌شود. به دلیل کُند بودن شمارش تمام زیرگراف‌های همبند یا ناهمبند، تعداد آن‌ها توسط یک تکنیک نمونه‌برداری تخمین زده می‌شود. شکل \ارجا{fig:gk-ggk-accuracy} دقت دسته‌بندی انواع مختلف GK را در مقابل GGK برای دو پایگاه‌داده DD و ENZYMES نمایش می‌دهد. در این شکل، \متن‌لاتین{\خمیده{A}} به معنی شمارش تمام زیرگراف‌های همبند و ناهمبند و \متن‌لاتین{\خمیده{C}} به معنی شمارش زیرگراف‌های فقط همبند است. عددی که بلافاصله بعد از \متن‌لاتین{\خمیده{A}} و \متن‌لاتین{\خمیده{C}} آمده است، اندازه زیرگراف‌های شمارش شده را نشان می‌دهد. اعداد ۲۰۰۰، ۴۰۰۰ و ۸۰۰۰ تعداد نمونه‌ها برای تخمین بردارهای گرافلتی است.
 
 برای ENZYME ، کرنل GGK دارای دقت ۶۴٪ و در مقابل بهترین نتیجه برای GK برابر ۳۸٪ است. همینطور برای DD ، کرنل GGK توانست به دقت ۸۰٪ برسد. این درحالی است که بازهم بهترین نتیجه برای GK ، ۷۷٪ بود. علاوه بر این، GGK سرعت اجرا را فوق‌العاده افزایش داده‌است. همانطور که در جدول \ارجا{tab:ggk-gk-runtime} مشخص است، GGK روی ENZYME حداقل ۱۰ بار سریعتر از پرسرعت‌ترین نوع GK است. برای DD نیز اعداد مشابهی دیده می‌شود: GGK حدود ۱۳ بار سریعتر از سریعترین نوع GK است.
-
-دو کرنل GGK و \متن‌لاتین{GK C5} از نظر نوع گرافلت‌ها کاملاً مشابه هستند. دلیل تفاوت دقت آن‌ها استفاده GGK از تابع کرنل گاوسی برای مقایسه تشابه دو بردار گرافلتی است در حالی که GK تنها به ضرب داخلی دو بردار اکتفا می‌کند.
-
-\begin{figure}[h]
+\begin{figure}[ht]
 \centering
-    \begin{subfigure}[t]{0.5\textwidth}
+    \begin{subfigure}[t]{0.4\textwidth}
         \includegraphics[width=\textwidth]{./dd-ggk-gk.pdf}
         \caption{DD}
     \end{subfigure}%
 ~
-    \begin{subfigure}[t]{0.5\textwidth}
+    \begin{subfigure}[t]{0.4\textwidth}
         \includegraphics[width=\textwidth]{./enzymes-ggk-gk.pdf}
         \caption{ENZYME}
     \end{subfigure}
-\caption{گرافلت کرنل گاوسی (GGK) و انواع گرافلت کرنل (GK). در این شکل، \متن‌لاتین{GK C5}، \متن‌لاتین{GK C4} و \متن‌لاتین{GK C3} گرافلت کرنل‌هایی هستند که به ترتیب تمام گرافلت‌های ۵، ۴ و ۳ رأسی را می‌شمارند. \متن‌لاتین{GK A5}، \متن‌لاتین{GK A4} و \متن‌لاتین{GK A3} گرافلت کرنل‌هایی هستند که به ترتیب تمام گرافلت‌های همبند و ناهمبند ۵، ۴ و ۳ رأسی را می‌شمارند. اعداد ۲۰۰۰، ۴۰۰۰ و ۸۰۰۰ نشان‌دهنده اندازه نمونه انتخاب شده برای تخمین تعداد گرافلت‌هاست.}
+\caption{گرافلت کرنل گاوسی (GGK) و انواع گرافلت کرنل (GK) . در این شکل، \متن‌لاتین{GK C5}، \متن‌لاتین{GK C4} و \متن‌لاتین{GK C3} گرافلت کرنل‌هایی هستند که به ترتیب تمام گرافلت‌های ۵، ۴ و ۳ رأسی را می‌شمارند. \متن‌لاتین{GK A5}، \متن‌لاتین{GK A4} و \متن‌لاتین{GK A3} گرافلت کرنل‌هایی هستند که به ترتیب تمام گرافلت‌های همبند و ناهمبند ۵، ۴ و ۳ رأسی را می‌شمارند. اعداد ۲۰۰۰، ۴۰۰۰ و ۸۰۰۰ نشان‌دهنده اندازه نمونه انتخاب شده برای تخمین تعداد گرافلت‌هاست.}
 \label{fig:gk-ggk-accuracy}
 \end{figure}
 
-\begin{table}[th]
+دو کرنل \متن‌لاتین{GGK} و \متن‌لاتین{GK C5} از نظر نوع گرافلت‌های تحت شمارش کاملاً مشابه هستند. دلیل برتری GGK استفاده از کرنل گاوسی برای مقایسه بردارهای گرافلتی است، در حالی که GK تنها به ضرب داخلی دو بردار برای مقایسه آن‌ها اکتفا می‌کند.
+
+\begin{table}[ht]
 \centering
 \begin{tabular}{|c|c|c|}
     \hline
@@ -149,7 +148,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
     \lr{GK A3 4000} & \lr{5'29"} & \lr{11'8"} \\ \hline
     \lr{GK A3 2000} & \lr{2'47"} & \lr{5'44"} \\ \hline
 \end{tabular}
-\caption{مدت زمان محاسبه ماتریس کرنل برای کرنل GGK و انواع کرنل GK}
+\caption{مدت زمان محاسبه ماتریس کرنل برای کرنل GGK و انواع کرنل GK ‫.‬}
 \label{tab:ggk-gk-runtime}
 \end{table}
 
