--- a/commands.tex
+++ b/commands.tex
@@ -45,6 +45,7 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 %\setiranicfont[Scale=1]{PersianModern-Oblique}
 \setiranicfont[Scale=1.15]{XB Zar Oblique}
 % چنانچه می‌خواهید اعداد در فرمول‌ها، انگلیسی باشد، خط زیر را غیرفعال کنید
+\DefaultMathsDigits
 %\setdigitfont{Yas}
 %\setdigitfont[Scale=.85]{Persian Modern}
 %\setdigitfont[Scale=1.1]{XB Zar}
