--- a/frontmatters.tex
+++ b/frontmatters.tex
@@ -38,7 +38,7 @@
 \keywords{گراف، گرافلت، یادگیری ماشین، کرنل، بیوانفورماتیک، عملکرد پروتئین}
 % چکیده پایان‌نامه را وارد کنید
 \fa-abstract{\noindent
-امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از داده روبرو است. بسیاری از این داده‌ها در قالب روابط بین موجودیت‌ها معنی پیدا می‌کنند. گراف، یک ساختار انعطاف‌پذیر و مناسب برای مدل‌سازی این نوع داده‌ها بدست می‌دهد. متأسفانه علیرغم اهمیت این موضوع، تکنیک‌های یادگیری ماشین روی ساختار گراف، دچار کمبود‌های جدی هستند و هنوز به تکامل نرسیده‌اند. دلیل این امر شاید پیچیده‌بودن مقایسه دو گراف باشد. در این پایان‌نامه، راه بهینه‌ای برای مقایسه دو گراف ارائه می‌دهیم و تابع کرنلی را تعریف می‌کنیم که به کمک آن می‌توان از الگوریتم‌های یادگیری ماشین روی داده‌های گراف به نحو بهینه و با دقت بالا استفاده کرد.
+امروزه با پیشرفت تکنولوژی و گسترش دانش، بشر با تولید حجم عظیمی از داده روبرو است. بسیاری از این داده‌ها در قالب روابط بین موجودیت‌ها معنی پیدا می‌کنند. گراف، یک ساختار انعطاف‌پذیر و مناسب برای مدل‌سازی این نوع داده‌ها بدست می‌دهد. متأسفانه علیرغم اهمیت این موضوع، تکنیک‌های یادگیری ماشین روی ساختار گراف، دچار کمبود‌های جدی هستند و هنوز به تکامل نرسیده‌اند. دلیل این امر شاید پیچیده‌بودن مقایسه دو گراف باشد. در این پایان‌نامه، راه بهینه‌ای برای مقایسه دو گراف ارائه می‌دهیم و تابع کرنلی را تعریف می‌کنیم که به کمک آن می‌توان از الگوریتم‌های یادگیری ماشین روی داده‌های گراف به نحو بهینه و با دقت بالا استفاده کرد. سپس از این کرنل در پیش‌بینی عملکرد پروتئین‌ها استفاده می‌کنیم، به این صورت که ساختار فضایی پروتئین را در قالب گراف مدل کرده و با استفاده از SVM ماشینی برای پیش‌بینی عملکرد پروتئین می‌سازیم. نشان خواهیم داد که دقت و سرعت این کرنل بسیار بهتر از گراف کرنل‌های پیشین است.
 }
 \newpage
 \thispagestyle{empty}
