--- a/chapter3.tex
+++ b/chapter3.tex
@@ -68,7 +68,7 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 آنزیم‌ها بزرگترین و مهم‌ترین دسته از پروتئین‌ها هستند. آن‌ها واکنش‌های شیمیایی را تسریع می‌کنند بدون آنکه خود در این واکنش‌ها تغییر یابند. آنزیم‌ها خاص منظوره هستند و معمولاً  هر کدام تنها روی یک یا چند واکنش تأثیرگذار است. حدود ۱۸۰۰۰ واکنش شناسایی شده‌اند که توسط آنزیم‌ها تسریع می‌شوند\جستار{Lang_2011} و برای ۸۷۰۰۰ آنزیم، ساختار سوم مشخص وجود دارد\جستار{Schomburg_2012}. آنزیم‌ها را می‌توان بر اساس عملکرد دسته‌بندی کرد. مهمترین دسته‌بندی آنزیم‌ها بر اساس عدد EC\پانوشت{\متن‌لاتین{Enzyme Commission number}} است. این عدد مشخص می‌کند که هر آنزیم روی چه واکنشی تأثیرگذار است.
 
 
-\section{پیشبینی عملکرد پروتئین}
+\section{پیشبینی عملکرد پروتئین}\label{sec:protein-function-prediction-review}
  روش‌های آزمایشگاهی برای تشخیص عملکرد پروتئین پر هزینه هستند. بنابراین سعی می‌شود ابتدا با روش‌های محاسباتی، برای هر پروتئین عملکردی پیش‌بینی گردد و سپس در آزمایشگاه درستی این پیش‌بینی آزمون شود. این روش‌های محاسباتی پیش‌بینی، بر اساس تخصیص عملکرد به پروتئین ناشناخته بر مبنای عملکردهای شناخته شده برای پروتئین‌های مشابه، کار می‌کنند. معیارهای مختلفی برای اندازه‌گیری شباهت بین دو پروتئین تعریف شده‌است که از مهمترین آن‌ها می‌توان به روش‌های هم‌ترازی توالی\پانوشت{\متن‌لاتین{sequence alignment}} (مثل \متن‌لاتین{PSI-BLAST}\جستار{Altschul_1997} و \متن‌لاتین{FASTA}\جستار{Pearson_1988}) و هم‌ترازی ساختار\پانوشت{\متن‌لاتین{structure alignment}} (مثل \متن‌لاتین{DALI}\جستار{Holm_1996} و \متن‌لاتین{CE}\جستار{Shindyalov_1998}) اشاره کرد. این روش‌ها بر این مبنا استوارند که پروتئین‌های مشابه از لحاظ ساختاری، به احتمال زیاد از یک جد مشترک\پانوشت{\متن‌لاتین{common ancestor}} تکامل یافته‌اند پس باید عملکرد مشابهی داشته باشند\جستار{Reeck_1987}. بر همین اساس باید گفت در سیر تکامل، ساختار سه‌بعدی پروتئین‌ها کمتر دستخوش تغییر می‌شود\جستار{Illergaard_2009}. پس استفاده از آن برای اندازه‌گیری شباهت، نتایج بهتری بدست خواهد داد. ولی همیشه اینگونه نیست: ممکن است پروتئین‌ها با ساختار مشابه، عملکردهای متفاوت و پروتئین‌های با عملکرد مشابه، ساختار متفاوتی داشته باشند\جستار{Whisstock_2003}. برای در نظر گرفتن این حالت، روش‌های جدید، علاوه بر ساختار، اطلاعات دیگری از پروتئین (نظیر مقر اتصال\پانوشت{\متن‌لاتین{binding site}}\جستار{Binkowski_2003}، تعاملات پروتئینی\جستار{Xenarios_2002} و موتیف‌های اسیدآمینه\پانوشت{amino-acid motifs}\جستار{Yao_2003}) را در تصمیم‌گیری دخیل می‌کنند که می‌توان آن‌ها را به طور کلی به دو دسته تقسیم کرد. روش‌هایی نظیر \متن‌لاتین{ProKnown}\جستار{Pal_2005} و \متن‌لاتین{ProFunc}\جستار{Laskowski_2005} هر منبع اطلاعات را به صورت جداگانه استفاده می‌کنند. به این صورت که در هر منبع، پروتئین‌های مشابه با پروتئین مورد سؤال را مشخص کرده و سپس این اطلاعات را برای رتبه‌بندی پروتئین‌ها بر اساس شباهت استفاده می‌کنند. در روش دوم برای استفاده از اطلاعات مختلف، یک مدل احتمالاتی توام\پانوشت{\متن‌لاتین{joint probabilistic model}} تشکیل می‌شود. دابسن\پانوشت{Dobson} و دویگ \پانوشت{Doig} پروتئین‌ها را به شکل بردارهایی از خصوصیات فیزیکی و شیمیایی نشان دادند و از SVM برای یادگیری روی این بردارها استفاده کردند\جستار{Dobson_2003}. در این حالت می‌توان از هر منبع اطلاعاتی و هر نوع داده‌ای برای گسترش بردار منتسب به هر پروتئین استفاده کرد.
 
 تلاش‌های زیادی برای بهبود مدل دابسن و دویگ هم از نظر سرعت اجرا و هم از نظر دقت، صورت گرفته است. در این بین، راهکارهای مبتنی بر گراف کرنل مورد توجه این پایان‌نامه هستند. گراف کرنل‌های گشت تصادفی (بخش \ارجا{sec:random-walk-kernels})، کوتاهترین مسیر (بخش \ارجا{sec:random-walk-kernels})، گرافلت کرنل (بخش \ارجا{sec:subgraph-kernels}) و خانواده کرنل‌های ویسفلر-لیمن (بخش \ارجا{sec:weisfeiler-lehman-kernels}) همگی در جهت بهبود این مدل استفاده شده‌اند. در ادامه، کاربرد گرافلت کرنل گاوسی در پیش‌بینی عملکرد پروتئین را بررسی می‌کنیم و نشان خواهیم داد که این کرنل توانایی بیشتری برای پیش‌بینی عملکرد پروتئین دارد.
@@ -201,3 +201,6 @@ R/.style={rectangle,draw,thick,align=center,minimum size=0.80cm}]
 \end{table}
 
 \section{جمع‌بندی}
+در این فصل، کاربرد گرافلت کرنل گاوسی برای پیش‌بینی عملکرد پروتئین‌ها را مورد بررسی قرار دادیم و نشان‌دادیم که این کرنل با سرعت بیشتر و دقت بهتری از گراف کرنل‌های پیشین می‌تواند پروتئین‌ها را به دسته‌های عملکردی تقسیم کند. محدودیتی که در این گراف کرنل وجود دارد این است که تنها، ساختار فضایی پروتئین برای تولید گراف استفاده شده‌است و در واقع بردار ویژگی‌ مورد استفاده محدود به ساختار پروتئین است. همانطور که در بخش \ارجا{
+sec:protein-function-prediction-review
+} اشاره شد، ساختار سوم به تنهایی نمی‌تواند پروتئین‌های هم‌عملکرد را بخوبی تشخیص دهد و باید از داده‌های دیگری نیز استفاده نمود. در کارهای آینده می‌توان بردارهای ویژگی را با استفاده از انواع داده‌ها نظیر ‌خصوصیات شیمیایی پروتئین، گسترش داد و نتایج دسته‌بندی را بهبود داد.
