Add chapter 4 and its consequences

--- a/backmatters.tex
+++ b/backmatters.tex
@@ -27,13 +27,13 @@
 \latindegree{M. Sc. }
 \latinsubject{Department of Computer Science}
 \latinfield{Bioinformatics}
-\latintitle{Gaussian Graphlet Kernel and its application on protein function prediction}
+\latintitle{Network Completion Problem Survey for Protein-Protein Interaction Networks}
 \firstlatinsupervisor{Dr. Changiz Eslahchi}
 \firstlatinadvisor{Dr. Mehdi Mirzaie}
 \latinname{Morteza}
 \latinsurname{Milani}
 \latinthesisdate{Feburary 2015}
-\latinkeywords{Graph, Graphlet, Machine Learning, Kernel, Bioinformatics, Protein}
+\latinkeywords{Graph, Graphlet, Machine Learning, Kernel, Bioinformatics, Protein, PPI, PIN}
 \en-abstract{\noindent
 In this thesis...
 }
