--- a/biblio.bib
+++ b/biblio.bib
@@ -665,4 +665,36 @@
   year={2009},
   publisher={Elsevier}
 }
-
+@Book{Macneill_2012,
+ author = {MacNeill, Stuart},
+ title = {The eukaryotic replisome a guide to protein structure and function},
+ publisher = {Springer},
+ year = {2012},
+ address = {Dordrecht New York},
+ isbn = {978-94-007-4572-8},
+ chapter = {1},
+ pages = {1--2}
+}
+@article{Ryan_2005,
+  title={Protein--protein interactions in human disease},
+  author={Ryan, Daniel P and Matthews, Jacqueline M},
+  journal={Current opinion in structural biology},
+  volume={15},
+  number={4},
+  pages={441--446},
+  year={2005},
+  publisher={Elsevier}
+}
+@article{Deane_2002,
+  doi = {10.1074/mcp.m100037-mcp200},
+  url = {http://dx.doi.org/10.1074/mcp.M100037-MCP200},
+  year  = {2002},
+  month = {may},
+  publisher = {American Society for Biochemistry {\&} Molecular Biology ({ASBMB})},
+  volume = {1},
+  number = {5},
+  pages = {349--356},
+  author = {C. M. Deane},
+  title = {Protein Interactions: Two Methods for Assessment of the Reliability of High Throughput Observations},
+  journal = {Molecular {\&} Cellular Proteomics}
+}
