--- a/main.tex
+++ b/main.tex
@@ -16,8 +16,10 @@
 \clearpage{\pagestyle{empty}\cleardoublepage}
 \input{chapter3}
 \clearpage{\pagestyle{empty}\cleardoublepage}
+\input{chapter4}
+\clearpage{\pagestyle{empty}\cleardoublepage}
 \backmatter
-%\bibliographystyle{chicago-fa}
-%\bibliography{biblio}
-\input{backmatters}
+\bibliographystyle{chicago-fa}
+\bibliography{biblio}
+%\input{backmatters}
 \end{document}
