--- a/preface.tex
+++ b/preface.tex
@@ -5,4 +5,6 @@
 
 از طرف دیگر، اکثر تکنیک‌های قوی در یادگیری ماشین با داده‌های برداری کار می‌کنند و نمی‌توان در آن‌ها، مستقیماً از گراف‌ استفاده کرد. به همین دلیل، بیشتر سعی بر آن است که گراف‌ها را در قالب بردارهای ویژگی نمایش داد. خلاصه کردن گراف در قالب یک بردار کار ساده‌ای نیست و معمولاً به از دست رفتن داده منجر می‌شود. بنابراین باید به نحوی اینکار را انجام داد که کمترین هدر رفت داده را داشته باشیم.
 
-\خمیده{گرافلت‌} مفهومی است که در چند سال اخیر برای مقایسه شبکه‌ها و گراف‌ها مورد استفاده قرار گرفته و توانایی خود برای خلاصه‌سازی گراف را اثبات کرده‌است. از گرافلت‌ها در تعریف تابع کرنل استفاده شده که البته به دلیل سرعت اجرای بسیار پایین، استفاده از آن غیر ممکن است. در این پایان‌نامه می‌خواهیم با تعریف گرافلت کرنل گاوسی، مشکلات قبلی استفاده از گرافلت در تعریف یک تابع کرنل را رفع کنیم. همچنین از این تابع کرنل، برای پیش‌بینی عملکرد پروتئین استفاده می‌کنیم و نشان می‌دهیم که این کرنل، چه از نظر سرعت و چه از نظر دقت، از کرنل‌های مشابه بهتر عمل می‌کند.
+\خمیده{گرافلت‌} مفهومی است که در چند سال اخیر برای مقایسه شبکه‌ها و گراف‌ها مورد استفاده قرار گرفته و توانایی خود برای خلاصه‌سازی گراف را اثبات کرده‌است. از گرافلت‌ها در تعریف تابع کرنل استفاده شده که البته به دلیل سرعت اجرای بسیار پایین، استفاده از آن غیر ممکن است. در این پایان‌نامه می‌خواهیم با تعریف گرافلت کرنل گاوسی، مشکلات قبلی استفاده از گرافلت در تعریف یک تابع کرنل را رفع کنیم. همچنین از این تابع کرنل، برای پیش‌بینی عملکرد پروتئین استفاده می‌کنیم و نشان می‌دهیم که این کرنل، چه از نظر سرعت و چه از نظر دقت، از کرنل‌های مشابه بهتر عمل می‌کند. سپس از آن در مسئله \خمیده{تکمیل شبکه} روی شبکه‌های تعاملات پروتئین استفاده می‌کنیم.
+
+هدف از مسئله تکمیل شبکه، پیش‌بینی قسمت‌های دیده نشده از یک شبکه (\متن‌لاتین{false negatives}) و همچنین تصحیح قسمت‌های اشتباه آن (\متن‌لاتین{false positives}) است. به دلیل خطا در روش‌های آزمایشگاهی، شبکه‌های تعاملات پروتئین موجود اشتباهات زیادی در حدود ۳۵ تا ۷۰ درصد دارند. یک راه حل برای تشخیص اشتباهات و پیش‌بینی تعاملات دیده نشده، استفاده از روش \خمیده{گسترش شبکه} است. به این ترتیب که ابتدا یک قسمت از شبکه با درصد اطمینان بالا را انتخاب می‌کنیم و مدل ریاضی آن را می‌سازیم. سپس مابقی شبکه را طبق مدل تشخیصی بازسازی می‌کنیم.
