Review of litrature is complete

--- a/biblio.bib
+++ b/biblio.bib
@@ -698,3 +698,205 @@
   title = {Protein Interactions: Two Methods for Assessment of the Reliability of High Throughput Observations},
   journal = {Molecular {\&} Cellular Proteomics}
 }
+@article{Hermjakob_2004,
+  doi = {10.1093/nar/gkh052},
+  url = {http://dx.doi.org/10.1093/nar/gkh052},
+  year  = {2004},
+  month = {jan},
+  publisher = {Oxford University Press ({OUP})},
+  volume = {32},
+  number = {90001},
+  pages = {452D--455},
+  author = {H. Hermjakob},
+  title = {{IntAct}: an open source molecular interaction database},
+  journal = {Nucleic Acids Research}
+}
+@article{Dandekar_1998,
+  doi = {10.1016/s0968-0004(98)01274-2},
+  url = {http://dx.doi.org/10.1016/S0968-0004(98)01274-2},
+  year  = {1998},
+  month = {sep},
+  publisher = {Elsevier {BV}},
+  volume = {23},
+  number = {9},
+  pages = {324--328},
+  author = {T Dandekar},
+  title = {Conservation of gene order: a fingerprint of proteins that physically interact},
+  journal = {Trends in Biochemical Sciences}
+}
+@article{Tamames_1997,
+  title={Conserved clusters of functionally related genes in two bacterial genomes},
+  author={Tamames, Javier and Casari, Georg and Ouzounis, Christos and Valencia, Alfonso},
+  journal={Journal of molecular evolution},
+  volume={44},
+  number={1},
+  pages={66--73},
+  year={1997},
+  publisher={Springer}
+}
+@article{Muley_2012,
+  doi = {10.1371/journal.pone.0042057},
+  url = {http://dx.doi.org/10.1371/journal.pone.0042057},
+  year  = {2012},
+  month = {jul},
+  publisher = {Public Library of Science ({PLoS})},
+  volume = {7},
+  number = {7},
+  pages = {e42057},
+  author = {Vijaykumar Yogesh Muley and Akash Ranjan},
+  editor = {Christos A. Ouzounis},
+  title = {Effect of Reference Genome Selection on the Performance of Computational Methods for Genome-Wide Protein-Protein Interaction Prediction},
+  journal = {{PLoS} {ONE}}
+}
+@article{Guimaraes_2006,
+  title={Predicting domain-domain interactions using a parsimony approach},
+  author={Guimar{\~a}es, Katia S and Jothi, Raja and Zotenko, Elena and Przytycka, Teresa M},
+  journal={Genome biology},
+  volume={7},
+  number={11},
+  pages={R104},
+  year={2006},
+  publisher={BioMed Central Ltd}
+}
+@article{Juan_2008,
+  doi = {10.1073/pnas.0709671105},
+  url = {http://dx.doi.org/10.1073/pnas.0709671105},
+  year  = {2008},
+  month = {jan},
+  publisher = {Proceedings of the National Academy of Sciences},
+  volume = {105},
+  number = {3},
+  pages = {934--939},
+  author = {D. Juan and F. Pazos and A. Valencia},
+  title = {High-confidence prediction of global interactomes based on genome-wide coevolutionary networks},
+  journal = {Proceedings of the National Academy of Sciences}
+}
+@article{Marcotte_1999,
+  title={A combined algorithm for genome-wide prediction of protein function},
+  author={Marcotte, Edward M and Pellegrini, Matteo and Thompson, Michael J and Yeates, Todd O and Eisenberg, David},
+  journal={Nature},
+  volume={402},
+  number={6757},
+  pages={83--86},
+  year={1999},
+  publisher={Nature Publishing Group}
+}
+@article{Enright_1999,
+  title={Protein interaction maps for complete genomes based on gene fusion events},
+  author={Enright, Anton J and Iliopoulos, Ioannis and Kyrpides, Nikos C and Ouzounis, Christos A},
+  journal={Nature},
+  volume={402},
+  number={6757},
+  pages={86--90},
+  year={1999},
+  publisher={Nature Publishing Group}
+}
+@article{Matthews_2001,
+  title={Identification of potential interaction networks using sequence-based searches for conserved protein-protein interactions or “interologs”},
+  author={Matthews, Lisa R and Vaglio, Philippe and Reboul, J{\'e}r{\^o}me and Ge, Hui and Davis, Brian P and Garrels, James and Vincent, Sylvie and Vidal, Marc},
+  journal={Genome research},
+  volume={11},
+  number={12},
+  pages={2120--2126},
+  year={2001},
+  publisher={Cold Spring Harbor Lab}
+}
+@article{Bock_2001,
+  doi = {10.1093/bioinformatics/17.5.455},
+  url = {http://dx.doi.org/10.1093/bioinformatics/17.5.455},
+  year  = {2001},
+  month = {may},
+  publisher = {Oxford University Press ({OUP})},
+  volume = {17},
+  number = {5},
+  pages = {455--460},
+  author = {J. R. Bock and D. A. Gough},
+  title = {Predicting protein-protein interactions from primary structure},
+  journal = {Bioinformatics}
+}
+@article{Hue_2010,
+  doi = {10.1186/1471-2105-11-144},
+  url = {http://dx.doi.org/10.1186/1471-2105-11-144},
+  year  = {2010},
+  publisher = {Springer Science $\mathplus$ Business Media},
+  volume = {11},
+  number = {1},
+  pages = {144},
+  author = {Martial Hue and Michael Riffle and Jean-Philippe Vert and William S Noble},
+  title = {Large-scale prediction of protein-protein interactions from structures},
+  journal = {{BMC} Bioinformatics}
+}
+@article{Aloy_2003,
+  doi = {10.1093/bioinformatics/19.1.161},
+  url = {http://dx.doi.org/10.1093/bioinformatics/19.1.161},
+  year  = {2003},
+  month = {jan},
+  publisher = {Oxford University Press ({OUP})},
+  volume = {19},
+  number = {1},
+  pages = {161--162},
+  author = {P. Aloy and R. B. Russell},
+  title = {{InterPreTS}: protein Interaction Prediction through Tertiary Structure},
+  journal = {Bioinformatics}
+}
+@article{Saito_2003,
+  doi = {10.1093/bioinformatics/btg070},
+  url = {http://dx.doi.org/10.1093/bioinformatics/btg070},
+  year  = {2003},
+  month = {apr},
+  publisher = {Oxford University Press ({OUP})},
+  volume = {19},
+  number = {6},
+  pages = {756--763},
+  author = {R. Saito and H. Suzuki and Y. Hayashizaki},
+  title = {Construction of reliable protein-protein interaction networks with a new interaction generality measure},
+  journal = {Bioinformatics}
+}
+@article{Chen_2006,
+  doi = {10.1093/bioinformatics/btl335},
+  url = {http://dx.doi.org/10.1093/bioinformatics/btl335},
+  year  = {2006},
+  month = {jun},
+  publisher = {Oxford University Press ({OUP})},
+  volume = {22},
+  number = {16},
+  pages = {1998--2004},
+  author = {J. Chen and W. Hsu and M. L. Lee and S.-K. Ng},
+  title = {Increasing confidence of protein interactomes using network topological metrics},
+  journal = {Bioinformatics}
+}
+@article{Han_2005,
+  doi = {10.1038/nbt1116},
+  url = {http://dx.doi.org/10.1038/nbt1116},
+  year  = {2005},
+  month = {jul},
+  publisher = {Nature Publishing Group},
+  volume = {23},
+  number = {7},
+  pages = {839--844},
+  author = {Jing-Dong J Han and Denis Dupuy and Nicolas Bertin and Michael E Cusick and Marc Vidal},
+  title = {Effect of sampling on topology predictions of protein-protein interaction networks},
+  journal = {Nat Biotechnol}
+}
+@article{Najafabadi_2008,
+  title={Sequence-based prediction of protein-protein interactions by means of codon usage},
+  author={Najafabadi, Hamed Shateri and Salavati, Reza},
+  journal={Genome Biol},
+  volume={9},
+  number={5},
+  pages={R87},
+  year={2008}
+}
+@article{HsinLiu_2012,
+  doi = {10.1093/bioinformatics/bts620},
+  url = {http://dx.doi.org/10.1093/bioinformatics/bts620},
+  year  = {2012},
+  month = {oct},
+  publisher = {Oxford University Press ({OUP})},
+  volume = {29},
+  number = {1},
+  pages = {92--98},
+  author = {C. Hsin Liu and K.-C. Li and S. Yuan},
+  title = {Human protein-protein interaction prediction by a novel sequence-based co-evolution method: co-evolutionary divergence},
+  journal = {Bioinformatics}
+}
