--- a/chapter4.tex
+++ b/chapter4.tex
@@ -1,34 +1,49 @@
 \chapter{تکمیل شبکه‌های تعاملات پروتئینی با استفاده از گرافلت کرنل گاوسی}\label{chap:network-completion-problem-ppi}
 همانطور که در فصل \ارجا{chap:protein_function_prediction} به آن اشاره شد، پروتئین‌ها اساس فعالیت‌های سلولی را تشکیل می‌دهند. اما پروتئینی که بتواند به تنهایی مفید باشد نادر است. آن‌ها معمولاً با اتصال به یکدیگر و تشکیل یک ساختار مرکب است که می‌توانند فعالیت‌های خود را انجام می‌دهند. به عنوان مثال، در فرآیند رونویسی از DNA\پانوشت{\متن‌لاتین{DNA replication}}، ماشین \متن‌لاتین{replisome} حداقل از تعامل ۴۰ پروتئین برای انجام وظیفه خود استفاده می‌کند\جستار{Macneill_2012}. مطالعه این تعاملات، نقش مهمی در درک سامانه‌های زیستی خواهد داشت و کشف دلایل و درمان بسیاری از بیماری‌ها به این وسیله ممکن خواهد بود\جستار{Ryan_2005}.
 
-به دلیل اهمیت فراوان موضوع، چندین روش آزمایشگاهی برای یافتن این تعاملات ابداع شده‌اند. بعضی از این روش‌ها کم‌توان\پانوشت{\متن‌لاتین{low-throughput}} هستند، یعنی در هر بار آزمایش تنها می‌توانند تعداد اندکی از تعاملات را شناسایی کنند. از این تکنیک‌ها بیشتر برای راستی سنجی پیش‌بینی‌ها استفاده می‌شود و قابلیت استفاده گسترده برای تشخیص تمام تعاملات را ندارند. اما بعضی دیگر در اصطلاح پر‌توان\پانوشت{\متن‌لاتین{high-throughput}} هستند و در هر بار آزمایش، تعاملات بین چندین پروتئین را تشخیص می‌دهند. مشکل مشترک این آن‌ها، درصد خطای بالاست. مثلاً برای تکنیک Y2H\پانوشت{\متن‌لاتین{Yeast two-hybrid}} درصد خطا تا حدود ۷۰ درصد تخمین زده شده‌است\جستار{Deane_2002}. از آنجایی که داده‌های موجود اکثراً نتیجه‌ی روش‌های پرتوان هستند خطای بالایی دارند. چه اینکه ممکن است تعاملاتی را که وجود ندارد، تشخیص دهند و چه تعاملاتی که وجود دارند را شناسایی نکنند.
+به دلیل اهمیت فراوان موضوع، چندین روش آزمایشگاهی برای یافتن این تعاملات ابداع شده‌اند. پایگاه داده \متن‌لاتین{IntAct}\جستار{Hermjakob_2004} حدود ۱۷۰ روش آزمایشگاهی را در وب‌سایت خود لیست کرده‌است که می‌توانند برای این منظور استفاده شوند. بعضی از این روش‌ها کم‌توان\پانوشت{\متن‌لاتین{low-throughput}} هستند، یعنی در هر بار آزمایش تنها می‌توانند تعداد اندکی از تعاملات را شناسایی کنند. از این تکنیک‌ها بیشتر برای راستی سنجی پیش‌بینی‌ها استفاده می‌شود و قابلیت استفاده گسترده برای تشخیص تمام تعاملات را ندارند. اما بعضی دیگر در اصطلاح پر‌توان\پانوشت{\متن‌لاتین{high-throughput}} هستند و در هر بار آزمایش، تعاملات بین چندین پروتئین را تشخیص می‌دهند. در دسته‌بندی دیگر، می‌توان این روش‌ها را در دو گروه تشخیص روابط دوتایی و چندتایی جای داد، به این معنی که بعضی روش‌ها تعامل مستقیم دو پروتئین را رصد می‌کنند در حالی که بعضی دیگر تعامل بین دو یا چند پروتئین را تشخیص می‌دهند که ممکن است مستقیم و یا غیر مستقیم با هم در تعامل باشند.
+
+مشکل مشترک روش‌های آزمایشگاهی، درصد خطای بالاست. مثلاً برای تکنیک Y2H\پانوشت{\متن‌لاتین{Yeast two-hybrid}} درصد خطا تا حدود ۷۰ درصد تخمین زده شده‌است\جستار{Deane_2002}. از آنجایی که داده‌های موجود اکثراً نتیجه‌ی روش‌های پرتوان هستند خطای بالایی دارند. چه اینکه ممکن است تعاملاتی را که وجود ندارد، تشخیص دهند و چه تعاملاتی که وجود دارند را شناسایی نکنند.
 
 راه حل‌های بیوانفورماتیکی متعددی برای غربالگری داده‌های موجود و پیش‌بینی تعاملات ارائه شده‌است. که در ادامه مروری بر آن‌ها خواهیم داشت.
 
 \section{روش‌های محاسباتی پیش‌بینی تعاملات پروتئینی}
-این روش‌ها را می‌توان به چهار دسته تقسیم کرد: روش‌های مبتنی بر 
+این روش‌ها را می‌توان به چهار دسته تقسیم کرد: روش‌های مبتنی بر اطلاعات ژنی، ساختار پروتئین‌ها، ساختار شبکه‌های تعاملات پروتئینی و استفاده از روش‌های یادگیری ماشین.
 
 \subsection{روش‌های مبتنی بر اطلاعات ژنی}
 \subsubsection{همسایگی ژن‌ها}
-همسایگی ژن\پانوشت{\متن‌لاتین{gene neighbouring}} یا هم‌محلی ژن‌ها\پانوشت{\متن‌لاتین{gene co-localization}} یکی از اولین و ساده‌ترین روش‌های محاسباتی برای پیش‌بینی تعاملات پروتئینی است. ایده اصلی، این مشاهده است که در ژنوم، ژن‌های مرتبط کنار هم قرار می‌گیرند. مهمترین مشکل این روش، این است که برخلاف پروکاریوت‌ها، در موجودات یوکاریوتی، این فرض صحیح نیست پس همسایگی ژنی نمی‌تواند بسیاری از تعاملات که بین پروتئین‌ها که ژن‌هایشان کنار هم قرار نگرفته‌اند را شناسایی کند. مشکل دیگر این است که انتخاب ژنوم تحت بررسی، تأثیر مستقیمی بر نتایج دارد که این موضوع کلیت نتایج را دچار مشکل می‌کند.
+همسایگی ژن\پانوشت{\متن‌لاتین{gene neighbouring}} یا هم‌محلی ژن‌ها\پانوشت{\متن‌لاتین{gene co-localization}} یکی از اولین و ساده‌ترین روش‌های محاسباتی برای پیش‌بینی تعاملات پروتئینی است\جستار{Dandekar_1998}\جستار{Tamames_1997}. ایده اصلی، این مشاهده است که در ژنوم، ژن‌های مرتبط کنار هم قرار می‌گیرند. مهمترین مشکل این روش، این است که برخلاف پروکاریوت‌ها، در موجودات یوکاریوتی، این فرض صحیح نیست پس همسایگی ژنی نمی‌تواند بسیاری از تعاملات که بین پروتئین‌ها که ژن‌هایشان کنار هم قرار نگرفته‌اند را شناسایی کند. مشکل دیگر این است که انتخاب ژنوم تحت بررسی، تأثیر مستقیمی بر نتایج دارد که این موضوع کلیت نتایج را دچار مشکل می‌کند\جستار{Muley_2012}.
 
 \subsubsection{ارتباط فیلوژنی}
-در اینجا، تعاملات پروتئینی بر اساس شباهت \خمیده{پروفایل فیلوژنی}\پانوشت{\متن‌لاتین{phylogenic profile}} پیش‌بینی می‌شود. پروفایل فیلوژنی برای یک پروتئین، برداری شامل درایه‌های یک و صفر است که وجود یا عدم وجود آن پروتئین در مجموعه‌ای از ارگانسیم‌ها را مشخص می‌کند. ایده اصلی این است که دو ژن که از نظر عملکرد مرتبط هستند، در بین گونه‌هایی که به لحاظ تکاملی از هم دور هستند، با هم حضور دارند. از این لحاظ می‌توان این روش را نمونه‌ی بازتری از روش همسایگی ژنی دانست که می‌تواند ارتباط ژن‌های با فاصله روی ژنوم را هم تشخیص دهد. این روش سه مشکل اساسی دارد. اول اینکه تعداد و توزیع ژنوم مورد استفاده تأثیر بسزایی در نتایج دارد. دوم آنکه بسیاری از پروتئین‌های حیاتی در همه یا اکثر موجودات وجود دارند و این روش نمی‌تواند ارتباط بین آن‌ها را تشخیص دهد. و سوم آنکه باید مجموعه‌ای از ژنوم‌های کامل را در اختیار داشته باشیم تا بتوانیم از این روش استفاده کنیم.
+در اینجا، تعاملات پروتئینی بر اساس شباهت \خمیده{پروفایل فیلوژنی}\پانوشت{\متن‌لاتین{phylogenic profile}} پیش‌بینی می‌شود\جستار{Guimaraes_2006}\جستار{Juan_2008}. پروفایل فیلوژنی برای یک پروتئین، برداری شامل درایه‌های یک و صفر است که وجود یا عدم وجود آن پروتئین در مجموعه‌ای از ارگانسیم‌ها را مشخص می‌کند. ایده اصلی این است که دو ژن که از نظر عملکرد مرتبط هستند، در بین گونه‌هایی که به لحاظ تکاملی از هم دور هستند، یا با هم حضور دارند یا هیچ‌کدام حضور ندارند، چون ژنی که به تنهایی کارایی ندارد در روند تکامل حذف خواهد شد. از این لحاظ می‌توان این روش را نوع  بازتری از روش همسایگی ژنی دانست که می‌تواند ارتباط ژن‌های با فاصله روی ژنوم را هم تشخیص دهد. این روش سه مشکل اساسی دارد. اول اینکه تعداد و توزیع ژنوم مورد استفاده تأثیر بسزایی در نتایج دارد. دوم آنکه بسیاری از پروتئین‌های حیاتی در همه یا اکثر موجودات وجود دارند و این روش نمی‌تواند ارتباط بین آن‌ها را تشخیص دهد. و سوم آنکه باید مجموعه‌ای از ژنوم‌های کامل را در اختیار داشته باشیم تا بتوانیم از این روش استفاده کنیم\جستار{Muley_2012}.
 
 \subsubsection{ادغام ژن‌ها}
-مشاهدات نشان داده است که ژن‌های مرتبط می‌توانند در قالب یک ژن چند منظوره ادغام شوند، چیزی که نتیجه آن در اصطلاح یک پروتئین \متن‌لاتین{Rosetta Stone} است. روش ادغام ژن\پانوشت{\متن‌لاتین{Gene Fusion}} از اطلاعات تکاملی و مقایسه ژنوم بهره می‌برد. به نوعی این روش، بهبود یافته دو روش قبلی است. بهترین ویژگی این روش استفاده از مفهومی است که اطلاعات بسیاری راجع به پروتئین‌های مرتبط بدست می‌دهد. اما مشکل اینجاست که در طبیعت ادغام ژن‌ها به خصوص در پروکاریوت‌ها زیاد اتفاق نمی‌افتد.
+مشاهدات نشان داده است که ژن‌های مرتبط می‌توانند در قالب یک ژن چند منظوره ادغام شوند، چیزی که نتیجه آن در اصطلاح یک پروتئین \متن‌لاتین{Rosetta Stone} است. روش ادغام ژن\پانوشت{\متن‌لاتین{Gene Fusion}} از اطلاعات تکاملی و مقایسه ژنوم بهره می‌برد\جستار{Marcotte_1999}\جستار{Enright_1999}. به نوعی این روش، بهبود یافته دو روش قبلی است. بهترین ویژگی این روش استفاده از مفهومی است که اطلاعات بسیاری راجع به پروتئین‌های مرتبط بدست می‌دهد. اما مشکل اینجاست که در طبیعت ادغام ژن‌ها به خصوص در پروکاریوت‌ها زیاد اتفاق نمی‌افتد.
 
 \subsection{روش‌های مبتنی بر ساختار پروتئین}
 \subsubsection{ساختار اول}
-از ساختار اول پروتئین یا توالی اسید‌های آمینه به همراه اطلاعات قبلی از تعاملات پروتئین می‌توان اطلاعاتی استخراج کرد که در پیش‌بینی تعاملات جدید مورد استفاده قرار می‌گیرد. در این روش چند جفت پروتئین که با هم تعامل دارند انتخاب شده و تکه‌های توالی که در بین آن‌ها مشترک است به عنوان نشانه در نظر گرفته می‌شوند. این نشانه‌ها بر روی توالی‌های دیگر جستجو شده و وجود آن‌ها نشان‌دهنده احتمال تعامل با پروتئین‌های در نظر گرفته شده است.
+از ساختار اول پروتئین یا توالی اسید‌های آمینه به همراه اطلاعات قبلی از تعاملات پروتئین می‌توان اطلاعاتی استخراج کرد که در پیش‌بینی تعاملات جدید مورد استفاده قرار می‌گیرد\جستار{Matthews_2001}\جستار{Bock_2001}. در این روش چند جفت پروتئین که با هم تعامل دارند انتخاب شده و تکه‌های توالی که در بین آن‌ها مشترک است به عنوان نشانه در نظر گرفته می‌شوند. این نشانه‌ها بر روی توالی‌های دیگر جستجو شده و وجود آن‌ها نشان‌دهنده احتمال تعامل با پروتئین‌های در نظر گرفته شده است.
 
 \subsubsection{ساختار سوم}
-استفاده از ساختار سوم پروتئین‌ها برای پیش‌بینی تعاملات بسیار منطقی است زیرا به هر حال پروتئین‌ها از طریق مقر‌های اتصال که توسط ساختار سوم آن‌ها تعیین می‌شود با هم ارتباط برقرار می‌کنند. مهمترین محدودیت این روش کمبود پروتئین‌هایی است که ساختار سه‌بعدیشان استخراج شده‌است. در مقایسه با روش‌های دیگر، نتایج این روش اطلاعات دقیق‌تری از نحوه تعامل و اتصال پروتئین‌ها بدست می‌دهند، از جمله اینکه مقر اتصال کجاست و ویژگی‌های بیوفیزیکی آن چیست.
+استفاده از ساختار سوم پروتئین‌ها برای پیش‌بینی تعاملات\جستار{Aloy_2003}\جستار{Hue_2010} بسیار منطقی است زیرا به هر حال پروتئین‌ها از طریق مقر‌های اتصال که توسط ساختار سوم آن‌ها تعیین می‌شود با هم ارتباط برقرار می‌کنند. مهمترین محدودیت این روش کمبود پروتئین‌هایی است که ساختار سه‌بعدیشان استخراج شده‌است. در مقایسه با روش‌های دیگر، نتایج این روش اطلاعات دقیق‌تری از نحوه تعامل و اتصال پروتئین‌ها بدست می‌دهند، از جمله اینکه مقر اتصال کجاست و ویژگی‌های بیوفیزیکی آن چیست.
 
 \subsection{روش‌های مبتنی بر ساختار شبکه}
 در نگاه ریاضیاتی به مسئله، شبکه تعاملات پروتئین، گرافی است که در آن مجموعه
-پروتئین‌های یک ارگانیسم، رئوس گراف و تعاملات بین آن‌ها، یال‌های این گراف در تشکیل می‌دهند. یعنی بین دو رأس، یال قرار می‌دهیم اگر پروتئین‌های متناظر تعامل داشته باشند.
+پروتئین‌های یک ارگانیسم، رئوس گراف و تعاملات بین آن‌ها، یال‌های این گراف در تشکیل می‌دهند. یعنی بین دو رأس، یال قرار می‌دهیم اگر پروتئین‌های متناظر تعامل داشته باشند. به اختصار به این شبکه‌، PIN\پانوشت{\متن‌لاتین{Protein Interaction Network}} گفته می‌شود.
 
-این شبکه‌ها ساختاری دارند که آن‌ها را از گراف‌های تصادفی متمایز می‌کند. از این ویژگی‌های ساختاری برای تشخیص تعاملات اشتباه و پیش‌بینی تعاملات جدید و یا رتبه بندی تعاملات موجود استفاده می‌شود. مشکل اصلی در این روش،این است که باید ابتدا مدلی برای شبکه‌های تعاملات پروتئینی در نظر گرفته شود. به دلیل نرخ بالای خطا در داده‌ها، مدل‌های پیش‌بینی شده هم دقیق نخواهند بود.
+این شبکه‌ها توپولوژی یا ساختاری دارند که آن‌ها را از گراف‌های تصادفی متمایز می‌کند. از این ویژگی‌های ساختاری برای تشخیص تعاملات اشتباه و پیش‌بینی تعاملات جدید و یا رتبه بندی تعاملات موجود استفاده می‌شود\جستار{Saito_2003}\جستار{Chen_2006}. مشکل اصلی در این روش،این است که باید ابتدا مدلی برای شبکه‌های تعاملات پروتئینی در نظر گرفته شود. به دلیل نرخ بالای خطا در داده‌ها، مدل‌های پیش‌بینی شده هم دقیق نخواهند بود\جستار{Han_2005}.
+
+\subsection{روش‌های مبتنی بر یادگیری ماشین}
+تمام روش‌هایی که در بالا به آن‌ها اشاره شد بر مبنای اصول اولیه زیستی پایه‌ریزی شده‌اند. اما دسته دیگری از روش‌ها وجود دارند که بر مبنای یادگیری عمل می‌کنند\جستار{Najafabadi_2008}\جستار{HsinLiu_2012}. به این صورت که از پروتئین‌ها یا هر دو پروتئین به صورت جفت، برداری از ویژگی‌ها استخراج می‌شود. این بردارها به عنوان ورودی یک ماشین دسته بندی مثل \متن‌لاتین{SVM} مورد استفاده قرار می‌گیرد تا ماشین بتواند بین پروتئین‌هایی که در تعامل هستند و آن‌هایی که قادر به تعامل نیستند تمایز قائل شود. در این روش‌ها از داده‌هایی مثل بیان ژن‌، اطلاعات مربوط به توالی و ساختار پروتئین‌ها استفاده می‌شود. اما برخلاف روش‌های قبل، در اینجا اصول و فرضیات زیستی در نحوه کار ماشین دخیل نیستند. در واقع ماشین به صورت یک جعبه سیاه عمل می‌کند و ما فقط شاهد نتایج هستیم.
+
+\section{روش پیشنهادی}
+در این پایان‌نامه می‌خواهیم با استفاده از گرافلت‌کرنل گاوسی روی ساختار سوم پروتئین‌ها و استفاده از اطلاعات موجود 
 
 
+در این روش، برای یک ارگانسیم ابتدا یک شبکه PIN با درصد اطمینان بالا از روی داده‌های موجود تشکیل می‌شود که در آن برخی پروتئین‌ها به همراه یال‌هایشان حذف شده‌اند. به این شبکه CPIN\پانوشت{\متن‌لاتین{Curated PIN}} می‌گوییم. پارامترهای این شبکه از جمله بردار گرافلت‌ها، توزیع درجات و ضریب خوشه‌بندی استخراج می‌گردد. حال باید پروتئین‌هایی که در مرحله اول از شبکه حذف شده‌اند به شبکه افزود. به این منظور برای هر پروتئین جدید، با استفاده از گرافلت‌کرنل گاوسی، لیست مرتبی از شبیه‌ترین پروتئین‌های موجود در CPIN استخراج می‌شود. این لیست را SPL می‌نامیم. همانطور که در فصل \ارجا{chap:protein_function_prediction} اشاره شد، پروتئین‌هایی که ساختار مشابه دارند معمولاً عملکرد یکسانی دارند. بنابراین فرض می‌کنیم این پروتئین می‌تواند با همسایه‌های k پروتئین اول SPL در شبکه CPIN تعامل داشته باشد. این تعاملات را تعاملات کاندید می‌نامیم. به هر تعامل کاندید، بر اساس یک سیستم امتیازدهی، امتیازی تعلق می‌گیرد. حال زیر مجموعه‌ای از تعاملات کاندید را به شبکه اضافه می‌کنیم که اولاً اضافه کردن آن‌ها پارامترهای شبکه را تغییر ندهد و ثانیاً از بین زیرمجموعه‌های امکان‌پذیر، مجموع امتیاز‌ یال‌های کاندید آن، بیشترین باشد.
+
+%\subsection{پایگاه‌های داده موجود}
+
+\subsection{مدل‌سازی شبکه تعاملات پروتئینی}
+
+\subsection{}
