New approach updated

--- a/chapter4.tex
+++ b/chapter4.tex
@@ -37,13 +37,14 @@
 تمام روش‌هایی که در بالا به آن‌ها اشاره شد بر مبنای اصول اولیه زیستی پایه‌ریزی شده‌اند. اما دسته دیگری از روش‌ها وجود دارند که بر مبنای یادگیری عمل می‌کنند\جستار{Najafabadi_2008}\جستار{HsinLiu_2012}. به این صورت که از پروتئین‌ها یا هر دو پروتئین به صورت جفت، برداری از ویژگی‌ها استخراج می‌شود. این بردارها به عنوان ورودی یک ماشین دسته بندی مثل \متن‌لاتین{SVM} مورد استفاده قرار می‌گیرد تا ماشین بتواند بین پروتئین‌هایی که در تعامل هستند و آن‌هایی که قادر به تعامل نیستند تمایز قائل شود. در این روش‌ها از داده‌هایی مثل بیان ژن‌، اطلاعات مربوط به توالی و ساختار پروتئین‌ها استفاده می‌شود. اما برخلاف روش‌های قبل، در اینجا اصول و فرضیات زیستی در نحوه کار ماشین دخیل نیستند. در واقع ماشین به صورت یک جعبه سیاه عمل می‌کند و ما فقط شاهد نتایج هستیم.
 
 \section{روش پیشنهادی}
-در این پایان‌نامه می‌خواهیم با استفاده از گرافلت‌کرنل گاوسی روی ساختار سوم پروتئین‌ها و استفاده از اطلاعات موجود 
+روش پیشنهادی در این پایان‌نامه، استفاده از گرافلت‌کرنل گاوسی به همراه ماشین \متن‌لاتین{SVM} روی ساختار سه بعدی دامین‌هاست. به این ترتیب که دو دسته داده از دامین‌های دارای تعامل و دامین‌های بدون تعامل ساخته می‌شود. سپس ماشین \متن‌لاتین{SVM} روی این دامین‌ها با استفاده از گرافلت‌کرنل گاوسی، train می‌شود. نحوه یادگیری به این صورت است که برای هر دامین، یک ساختار سه بعدی از روی پروتئین‌هایی که دارای این دامین هستند استخراج شده و سپس از گرافلت کرنل گاوسی برای ساخت ماتریس شباهت دامین‌ها و train کردن ماشین استفاده می‌شود.
+
+نحوه استفاده از این ماشین برای شناسایی خطاهای موجود در شبکه‌های تعاملات پروتئینی و پیش‌بینی تعاملات جدید به این صورت است که برای هر دو پروتئین موجود در شبکه، 
+
+\section{پایگاه‌های داده}
+\subsection{پایگاه Pfam}
+\subsection{پایگاه IntAct}
+\subsection{پایگاه BioGRID}
+\subsection{پایگاه Negatome}
 
 
-در این روش، برای یک ارگانسیم ابتدا یک شبکه PIN با درصد اطمینان بالا از روی داده‌های موجود تشکیل می‌شود که در آن برخی پروتئین‌ها به همراه یال‌هایشان حذف شده‌اند. به این شبکه CPIN\پانوشت{\متن‌لاتین{Curated PIN}} می‌گوییم. پارامترهای این شبکه از جمله بردار گرافلت‌ها، توزیع درجات و ضریب خوشه‌بندی استخراج می‌گردد. حال باید پروتئین‌هایی که در مرحله اول از شبکه حذف شده‌اند به شبکه افزود. به این منظور برای هر پروتئین جدید، با استفاده از گرافلت‌کرنل گاوسی، لیست مرتبی از شبیه‌ترین پروتئین‌های موجود در CPIN استخراج می‌شود. این لیست را SPL می‌نامیم. همانطور که در فصل \ارجا{chap:protein_function_prediction} اشاره شد، پروتئین‌هایی که ساختار مشابه دارند معمولاً عملکرد یکسانی دارند. بنابراین فرض می‌کنیم این پروتئین می‌تواند با همسایه‌های k پروتئین اول SPL در شبکه CPIN تعامل داشته باشد. این تعاملات را تعاملات کاندید می‌نامیم. به هر تعامل کاندید، بر اساس یک سیستم امتیازدهی، امتیازی تعلق می‌گیرد. حال زیر مجموعه‌ای از تعاملات کاندید را به شبکه اضافه می‌کنیم که اولاً اضافه کردن آن‌ها پارامترهای شبکه را تغییر ندهد و ثانیاً از بین زیرمجموعه‌های امکان‌پذیر، مجموع امتیاز‌ یال‌های کاندید آن، بیشترین باشد.
-
-%\subsection{پایگاه‌های داده موجود}
-
-\subsection{مدل‌سازی شبکه تعاملات پروتئینی}
-
-\subsection{}
