--- a/backmatters.tex
+++ b/backmatters.tex
@@ -32,10 +32,10 @@
 \firstlatinadvisor{Dr. Mehdi Mirzaie}
 \latinname{Morteza}
 \latinsurname{Milani}
-\latinthesisdate{Feburary 2015}
+\latinthesisdate{January 2015}
 \latinkeywords{Graph, Graphlet, Machine Learning, Kernel, Bioinformatics, Protein, PPI, PIN}
 \en-abstract{\noindent
-In this thesis...
+Nowadays, with advances in technology, we are facing a tremendous amount of data. These data usually consist of relationships between entities, a network. In biology, we can see instances of networks in different problems: protein interaction networks, regulatory networks, gene co-expressions, metabolism networks, etc. Graph or network provides a flexible structure to model these kinds of data. Despite its importance, machine learning techniques for graph-structured data are investigated until recently so they are not mature. It may be due to the complexity of graph comparison problem. In this thesis, we introduce an efficient approach to compare graphs of any size. Using this approach, we implement a kernel on graph-structured data that can be used in machine learning algorithms with high performance and accuracy. We then use this kernel on network completion problem for protein interaction networks, to find false positives and to predict new interactions.
 }
 \latinvtitle
 \end{latin}
