--- a/chapter4.tex
+++ b/chapter4.tex
@@ -37,14 +37,13 @@
 تمام روش‌هایی که در بالا به آن‌ها اشاره شد بر مبنای اصول اولیه زیستی پایه‌ریزی شده‌اند. اما دسته دیگری از روش‌ها وجود دارند که بر مبنای یادگیری عمل می‌کنند\جستار{Najafabadi_2008}\جستار{HsinLiu_2012}. به این صورت که از پروتئین‌ها یا هر دو پروتئین به صورت جفت، برداری از ویژگی‌ها استخراج می‌شود. این بردارها به عنوان ورودی یک ماشین دسته بندی مثل \متن‌لاتین{SVM} مورد استفاده قرار می‌گیرد تا ماشین بتواند بین پروتئین‌هایی که در تعامل هستند و آن‌هایی که قادر به تعامل نیستند تمایز قائل شود. در این روش‌ها از داده‌هایی مثل بیان ژن‌، اطلاعات مربوط به توالی و ساختار پروتئین‌ها استفاده می‌شود. اما برخلاف روش‌های قبل، در اینجا اصول و فرضیات زیستی در نحوه کار ماشین دخیل نیستند. در واقع ماشین به صورت یک جعبه سیاه عمل می‌کند و ما فقط شاهد نتایج هستیم.
 
 \section{روش پیشنهادی}
-روش پیشنهادی در این پایان‌نامه، استفاده از گرافلت‌کرنل گاوسی به همراه ماشین \متن‌لاتین{SVM} روی ساختار سه بعدی دامین‌هاست. به این ترتیب که دو دسته داده از دامین‌های دارای تعامل و دامین‌های بدون تعامل ساخته می‌شود. سپس ماشین \متن‌لاتین{SVM} روی این دامین‌ها با استفاده از گرافلت‌کرنل گاوسی، train می‌شود. نحوه یادگیری به این صورت است که برای هر دامین، یک ساختار سه بعدی از روی پروتئین‌هایی که دارای این دامین هستند استخراج شده و سپس از گرافلت کرنل گاوسی برای ساخت ماتریس شباهت دامین‌ها و train کردن ماشین استفاده می‌شود.
+روش پیشنهادی در این پایان‌نامه، استفاده از گرافلت‌کرنل گاوسی به همراه ماشین \متن‌لاتین{SVM} روی ساختار سه بعدی پروتئین‌هاست. برای یک شبکه تعاملات پروتئین ‪$‬G ‪=‬ ‪(‬V‪,‬E‪)$‬ و تمام پروتئین‌های ‪$‬P‪_‬i‪,‬P‪_‬j\in V‪$‬، تمام دوتایی‌های ‪$‬(P‪_‬i‪,‬P‪_‬j)‪$‬ را در نظر می‌گیریم.‌ این دوتایی‌ها به دو دسته تقسیم می‌شوند: ‪$(‬P‪_‬i‪,‬P‪_‬j‪)‬\in E‪$‬ که به آن‌ها دسته متعامل و ‪$(‬P‪_‬i‪,‬P‪_‬j‪)‬\notin E‪$‬ که به آن‌ها دسته بدون تعامل می‌گوییم. باید ماشین ‪$‬SVM‪$‬ را طوری آموزش دهیم که بتواند بین این دو دسته تمایز قائل شود. به همین منظور از گرافلت کرنل گاوسی روی دوتایی‌های ‪$(‬P‪_‬i‪,‬P‪_‬j‪)$‬ استفاده کرده و ماشین را \متن‌لاتین{train} می‌کنیم. با ورود یک پروتئین جدید، ماشین تمام دوتایی‌های ممکن را تشکیل داده و طبق ماتریس کرنل، تشخیص می‌دهد که هر دوتایی به کدام دسته تعلق دارد. در ادامه به شرح این روش می‌پردازیم و سپس نتایج را روی چند پایگاه‌داده بررسی می‌کنیم.
 
-نحوه استفاده از این ماشین برای شناسایی خطاهای موجود در شبکه‌های تعاملات پروتئینی و پیش‌بینی تعاملات جدید به این صورت است که برای هر دو پروتئین موجود در شبکه، 
-
-\section{پایگاه‌های داده}
-\subsection{پایگاه Pfam}
-\subsection{پایگاه IntAct}
-\subsection{پایگاه BioGRID}
-\subsection{پایگاه Negatome}
-
-
+\section{انتخاب شبکه تعاملات پروتئین}
+\subsection{شبکه تعاملات پروتئین با اطمینان بالا}
+\subsection{پایگاه DIP}
+\section{ساخت گراف از سطوح در دسترس پروتئین}
+\section{نحوه یادگیری ماشین}
+\section{شرایط آزمون}
+\section{بررسی نتایج}
+\section{جمع‌بندی}
