--- a/frontmatters.tex
+++ b/frontmatters.tex
@@ -33,7 +33,7 @@
 % نام خانوادگی پژوهشگر را وارد کنید
 \surname{میلانی}
 % تاریخ پایان‌نامه را وارد کنید
-\thesisdate{1393 شهریور}
+\thesisdate{\rl{دی ۱۳۹۳}}
 % کلمات کلیدی پایان‌نامه را وارد کنید
 \keywords{گراف، گرافلت، یادگیری ماشین، کرنل، بیوانفورماتیک، عملکرد پروتئین}
 % چکیده پایان‌نامه را وارد کنید
