--- a/main.tex
+++ b/main.tex
@@ -19,7 +19,7 @@
 \input{chapter4}
 \clearpage{\pagestyle{empty}\cleardoublepage}
 \backmatter
-\bibliographystyle{chicago-fa}
-\bibliography{biblio}
-%\input{backmatters}
+%\bibliographystyle{chicago-fa}
+%\bibliography{biblio}
+\input{backmatters}
 \end{document}
