--- a/chapter2.tex
+++ b/chapter2.tex
@@ -385,7 +385,32 @@
 فرض کنید $x$ هر رأس از گراف $G$ باشد. مسئله، محاسبه تعداد دفعاتی است که $x$ در اوربیت $O_i$ از گرافلت‌های القایی گراف $G$ قرار گرفته است. این عدد را با $o_i$ نمایش می‌دهیم. الگوریتم بر اساس دستگاهی از معادل خطی کار می‌کند که تعداد اوربیت‌های مختلف، $o_i$ ها، را به هم مربوط می‌کند. از آنجایی که رتبه این دستگاه یکی کمتر از تعداد اوربیت‌ها خواهد بود، می‌توان با شمارش تنها یکی از اوربیت‌های گراف، تعداد مابقی آن‌ها را بدست آورد. در ادامه ابتدا نحوه ساختن این دستگاه را شرح داده و سپس روش تبدیل تعداد اوربیت‌ها به تعداد گرافلت‌ها را توضیح خواهیم داد.  
 
 \subsubsection{شمارش اوربیت‌های چهار رأسی}
- همچنین، از آنجایی که باید یکی از اوربیت‌ها را در گراف $G$ شمارش کرد، اوربیت $O_14$ را برای این منظور انتخاب می‌کنیم. همچنین، برای شمارش یکی از اوربیت‌ها، اوربیت $O_14$ را انتخاب می‌کنیم و روش بهینه شمارش آن در گراف را ارائه می‌دهیم.
+%سمت راست معادلاتی که دستگاه را تشکیل می‌دهد شامل عباراتی است که از گراف $G$ محاسبه می‌شود.
+فرض کنید $c(u,v) = |N(u) \cap N(v)|$ تعداد همسایه‌های مشترک دو رأس $u$ و $v$ باشد. همینطور $p(u,v)$ تعداد مسیرهای سه رأسی باشد که از رأس $u$ آغاز می‌شود، به رأس $v$ می‌رود و در رأسی مثل $t$ که به $u$ متصل نیست، پایان می‌یابد. این عدد به راحتی قابل محاسبه است: 
+$p(u,v) = deg(v) -1 -c(u,v)$.
+
+اگر رأس $x$ روی یک گرافلت $k$-رأسی مثل $G_i$ قرار گرفته باشد، حتماً روی یک گرافلت $(k-1)$-رأسی مثل $G_j$ هم قرار گرفته است، کافی است دورترین رأس از $x$ را از گراف $G_i$ حذف کنیم. زیرگرافی که از باقی رئوس بوجود می‌آید همبند است (در غیر این صورت، رأسی که جزء مؤلفه همبندی نیست دورترین رأس از $x$ بوده است) بنابراین با یکی از گرافلت‌های $(k-1)$-رأسی مثل $G_j$ یکریخت است.
+
+عکس این مطلب نیز صحیح است: هر گرافلت چهار رأسی را می‌توان با افزودن یک رأس به یکی از گرافلت‌های سه رأسی ساخت. جهت یافتن رابطه تعداد اوربیت‌های گرافلت‌های چهار رأسی برای رأس $x$، تمام اوربیت‌های سه‌رأسی که $x$ روی آن‌ها قرار گرفته است را می‌یابیم و سپس امکان گسترش آن‌ها به گرافلت‌های چهار رأسی را بررسی می‌کنیم.
+
+به عنوان مثال، همانطور که در شکل \ارجا{fig:o9-o12-relation} می‌بینید رئوس $x$،$y$ و $z$ گرافلت $G_1$ را القا می‌کنند که یک مسیر به طول دو است. این گرافلت، توسط $w$ و یال‌های $(w,y)$ و $(w,z)$ به یک گرافلت چهار رأسی تبدیل می‌شود. تعداد رأس‌های ممکن مثل $w$ برابر است با $c(y,z)$. در شکل $c(y,z) = 3$ تا از این رئوس وجود دارد که با $w_1$ ، $w_2$ و $w_3$ نشان داده شده‌اند. یال $(x,w)$ ممکن است در گراف $G$ وجود داشته باشد (مثلاً برای $w_3$ این حالت در نظر گرفته شده) یا ممکن است وجود نداشته باشد (رئوس $w_1$ و $w_2$ اینگونه‌اند). بدون این یال، رئوس $x$ ، $y$ ، $z$ و $w$ گرافلت $G_6$ را تشکیل می‌دهند که $x$ روی اوربیت $O_9$ قرار گرفته است. وجود این یال باعث می‌شود که رئوس مذکور، گرافلت $G_7$ را بسازند که در آن $x$ روی اوربیت $O_{12}$ قرار گرفته‌است. از آنجایی که تمام $c(y,z)$ رأس در $N(y) \cap N(z)$ باید یا در $G_7$ یا در $G_6$ باشند که متقابلاً باعث می‌شود $x$ در $O_9$ یا $O_{12}$ قرار گیرد، پس برای سه‌تایی $x$، $y$ و $z$ خواهیم داشت: $o_9 + o_{12} = c(y,z)$.
+
+حال برای تمام مسیرهای به طول دو که از $x$ شروع می‌شوند، این عدد را جمع می‌زنیم. البته باید دقت داشت که در جمع، تقارن‌ها در نظر گرفته‌شوند: هر گرافلت $G_6$  در گراف $G$ ، با تعویض جای $z$ و $w$ دوبار شمره می‌شود. این اتفاق با تعویض $y$‌ و $w$ برای $G_7$ هم رخ می‌دهد. با این حساب می‌توانیم معادله زیر را تشکیل دهیم:
+\begin{equation*}
+2o_9+2o_{12} = \sum_{\substack{y,z: x,z\in N(y)\\G[\{x,y,z\}] \simeq G_1 }}c(y,z),
+\end{equation*}
+که در آن $G[\{x,y,z\}]$ زیرگراف القایی از $G$ است که توسط سه رأس $x$ ، $y$ و $z$ ساخته می‌شود.
+
+برای مثالی دیگر، رابطه بین اوربیت‌های $O_6$ و $O_9$ را بررسی می‌کنیم. برای اینکار یک مسیر به طول دو از رئوس $x$ ، $y$ و $z$ را توسط یک مسیر دیگر که از $x$ و $y$ شروع می‌شود، گسترش می‌دهیم؛ قبلاً تعداد این مسیرها را با $p(x,y)$ نمادگذاری کردیم. بسته به اینکه رأس جدید ($w$) با $z$ همسایه باشد یا نه، با یک گرافلت $G_6$ یا $G_4$ روبرو هستیم. با احتساب تقارن، و همچنین حذف حالتی که در آن $w=z$ ، خواهیم داشت:
+\begin{equation*}
+2o_6+2o_9 = \sum_{\substack{y,z: x,z\in N(y)\\G[\{x,y,z\}] \simeq G_1 }}(p(x,y) - 1).
+\end{equation*}
+
+از آنجایی که تنها دو گرافلت سه رأسی وجود دارد و حالت‌های گسترش نیز محدود‌اند، می‌توان تمام گسترش‌های ممکن را در نظر گرفت و از آن‌ها یک دستگاه با ده معادله مستقل خطی و یازده متغیر (متناظر با یازده اوربیت گرافلت‌های چهار رأسی) استخراج کرد. در ضمیمه \ارجا{appendix:combinatorial-counting} این معادلات را آورده‌ایم.
+
+عبارات موجود در سمت راست این معادلات تنها وابسته به گراف $G$ هستند و باید برای هر رأس $x$ محاسبه شوند.
+
+ برای سرعت بخشیدن به اجرای الگوریتم، مقادیر $c(u,v)$ و $p(u,v)$ را از قبل محاسبه می‌کنیم. البته کافی است این مقادیر را تنها برای جفت رئوس همسایه محاسبه کرد زیرا طبق تعریف، $p(u,v)$ فقط برای دو رأس مجاور تعریف می‌شود و همچنین در تمام معادلات به غیر از معادله آخر، $c(u,v)$ تنها برای رئوسی که همسایه هستند مورد نیاز است. بنابراین با اختصاص $O(m)$ فضا، این مقادیر را محاسبه می‌کنیم. برای معادله آخر، کافی است تعداد مسیر‌های به طول دو برای هر رأس را بشماریم. 
 
 \subsubsection{شمارش اوربیت‌های پنج رأسی}
 
