--- a/commands.tex
+++ b/commands.tex
@@ -34,8 +34,8 @@ node4/.style={circle,draw,fill,double=black,color=gray!30,align=center}}
 % بسته‌ای برای ظاهر شدن «مراجع» و «نمایه» در فهرست مطالب
 \usepackage[nottoc]{tocbibind}
 % دستورات مربوط به ایجاد نمایه
-\usepackage{makeidx}
-\makeindex
+%\usepackage{makeidx}
+%\makeindex
 %%%%%%%%%%%%%%%%%%%%%%%%%%
 \setcounter{secnumdepth}{3}
 %%%%%%%%%%%%%%%%%%%%%%%%%%
