--- a/main.tex
+++ b/main.tex
@@ -2,8 +2,8 @@
 \input{commands}
 \begin{document}
 \frontmatter
-\input{frontmatters}
-\input{preface}
+%\input{frontmatters}
+%\input{preface}
 \tableofcontents
 %\listoffigures
 \clearpage{\pagestyle{empty}\cleardoublepage}
@@ -19,7 +19,7 @@
 \input{chapter4}
 \clearpage{\pagestyle{empty}\cleardoublepage}
 \backmatter
-%\bibliographystyle{chicago-fa}
-%\bibliography{biblio}
-\input{backmatters}
+\bibliographystyle{chicago-fa}
+\bibliography{biblio}
+%\input{backmatters}
 \end{document}
